[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Cube/CubeSound.mp3" type="AudioStream" id=1]
[ext_resource path="res://src/Cube/Cube.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "activation"

[sub_resource type="Animation" id=5]
resource_name = "active"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CubeMesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 360, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CubeMesh:material/0:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0, 1, 1 ), Color( 0.443137, 0.933333, 1, 1 ), Color( 0.686275, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, 0.5, 0.5 ), Vector3( 0.4, 0.4, 0.4 ), Vector3( 0.5, 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CubeMesh:material/0:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 1, 1 ), Color( 1, 0.682353, 1, 1 ), Color( 1, 0, 1, 1 ) ]
}

[node name="Cube" type="Area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )

[node name="CubeMesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Collider" type="CollisionShape" parent="."]
transform = Transform( 1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/activation = SubResource( 4 )
anims/active = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0
pitch_scale = 0.6

[connection signal="input_event" from="." to="." method="_on_Cube_input_event"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="animation_started" from="Animation" to="." method="_on_Animation_animation_started"]
